tests/rustdoc-ui/intra-doc/deny-intra-link-resolution-failure.rs
#![deny(rustdoc::broken_intra_doc_links)]

/// [v2] //~ ERROR
pub fn foo() {}
